--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
     "activity":null,
-    "replayRate":"5",
+    "replyRate":"5",
     "responses":[
         "Response 1",
         "Response 2",
